# goes-data-toolkit

./: .gitignore  README.md  goes-data-toolkit.yml  pkgs.txt  pyproject.toml
docs/: analise.ipynb
goes-toolkit/: __init__.py  __main__.py  check_error.py  datalist.py  download_files.py  file_guide_AWS_15min.pkl  filter_data.py  process.py  process_aws.py  process_dsa.py  process_dsa16.py  process_noaa.py
goes-toolkit/scripts/: analise.csv  analise.py  create_raster_from_array.py  crop.nc  crop.nc.aux.xml  crop.py  get_sat_list.py  refact.py  solar_angle.py
ngd/: __init__.py  __main__.py  check_error.py  datalist.py  download_files.py
ngd/scripts/: get_sat_list.py
