[tool.poetry]
name = "noaa-goes-downloader"
version = "0.1.0"
description = ""
authors = ["Helvecio Leal <helvecio.neto@inpe.br>"]

[tool.poetry.dependencies]
python = "3.9.10"
requests = "^2.27.1"
bs4 = "^0.0.1"
pandas = "^1.4.1"
ipykernel = "^6.9.1"
pytimeparse = "^1.1.8"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
