[tool.poetry]
name = "goes-data-toolkit"
version = "0.1.0"
description = ""
authors = ["Helvecio Leal <helvecio.neto@inpe.br>"]

[tool.poetry.dependencies]
python = "3.9.10"
pandas = "^1.4.1"
pytimeparse = "^1.1.8"
requests = "^2.27.1"
netCDF4 = "^1.5.8"
GDAL = "^3.4.1"
OSR = "^0.0.1"
pyproj = "^3.3.0"
s3fs = "^2022.2.0"
matplotlib = "^3.5.1"
tk = "^0.1.0"
PyQt5 = "^5.15.6"
pvlib = "^0.9.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
